# synstation_research

./: .gitignore  README.md  fee_simulation.py  find_fee_rate.py  find_optimal_fee_rate.py  multiple_market.py  optimal_routing.py  plot_emission.py  pyproject.toml  redemption_simulation.py  treasury_payment.py
src/: PredictionMarketLiquidityProviderStrategy.sol  Vault.sol
src/interfaces/: IStrategy.sol
synstation/: amm.py
